Bug fix.